fs_test/example_traces/interp_dump_failed-check.trace.expected.stderr

Fatal error: File "example_traces/interp_dump_failed-check.trace", line 3, characters 5-15:
dump not allowed in trace
