fs_test/example_traces/interp_dump_failed-check.trace
# processing file 'example_traces/interp_warn_dump_failed-int.trace' ...
        @type trace
     1: dump /
